# Cachena

./: .gitignore  Cachena Budget.csv  FAQ.md  LICENSE  Professional_Biography_sidhuns.md  Project-Description.md  README.md  Tasks.md  User Docs.md  User_Stories.md  biography_sloancb.md  build.sh  contract.md  data-dump.sql  docker-compose.yml  package-lock.json  package.json
PPT_Overview/: cachena_ppt.pptx
backend/: Dockerfile  package-lock.json  package.json  server.js
backend/config/: database.js
backend/controllers/: tagController.js  trackedUserObjectController.js  trackerController.js  userController.js
backend/middleware/: authMiddleware.js
backend/models/: index.js  tag.js  trackedUserObject.js  tracker.js  user.js
backend/routes/: tagRoutes.js  trackedUserObjectRoutes.js  trackerRoutes.js  userRoutes.js
bios/: corey_sloan_bio.md  nihall_sidhu_bio.md
database/: Dockerfile  initfile.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.js  config.json
frontend/src/API/: interfaces.ts  testData.ts  trackedUserObjectAPI.ts  trackerAPI.ts  userAPI.ts
frontend/src/pages/: 404.tsx  AddTUO.tsx  Home.tsx  LoadTestData.tsx  LoginPage.tsx  Settings.tsx  TuoPage.tsx
frontend/src/styling/: LoginPage.css  components.tsx  fonts.css
gps_monitoring_service/: Dockerfile  GPS_data_notes.txt  NMEA.output  claude_gps.py  gps.c  gps.py  requirements.txt
project_tasks/: Project_Tasks.xlsx
tracker/: .gitignore  CMakeLists.txt  GPS_data_notes.txt  NMEA.output  build.sh  cubeide-gcc.cmake  gcc-arm-none-eabi.cmake  gps.py
tracker/Core/Inc/: FreeRTOSConfig.h  NMEA_parser.h  gps.h  main.h  platform.h  stm32wlxx_hal_conf.h  stm32wlxx_it.h  sys_app.h  sys_conf.h  tracker_app.h  uart_echo.h  usart.h  usart_if.h  utilities_conf.h  utilities_def.h
tracker/Core/Src/: NMEA_parser.c  dma.c  gpio.c  gps.c  main.c  stm32_lpm_if.c  stm32wlxx_hal_msp.c  stm32wlxx_hal_timebase_tim.c  stm32wlxx_it.c  sys_app.c  timer_if.c  tracker_app.c  uart_echo.c  usart.c  usart_if.c
tracker/Debug/: TrackerOS.elf  test.map
tracker/Drivers/CMSIS/Device/ST/STM32WLxx/Include/: system_stm32wlxx.h
tracker/SubGHz_Phy/App/: app_subghz_phy.c  app_subghz_phy.h  app_version.h  subghz_phy_app.c  subghz_phy_app.h
